--- a/bzl/docs/cross_compilation.adoc
+++ b/bzl/docs/cross_compilation.adoc
@@ -1,2 +1,12 @@
 = cross-compilation
 
+WARNING: cross-compilation will only work for C code (runtimes,
+ocamlyacc) at the moment.
+
+TIP: Tools that are used in the build, such as `runtime/sak.exe` are
+always built with the target set to the local build host, even when
+cross-compiling. Bazel automatically transitions the configurations to
+ensure this. So when you cross-compile, for example from Mac to Linux,
+you will see both the Mac local compiler used to compile such build
+tools, and the cross-compiler used to compile output for the foreign
+target.
