--- a/bzl/docs/bootstrapping.adoc
+++ b/bzl/docs/bootstrapping.adoc
@@ -1,2 +1,13 @@
 = bootstrapping
 
+link:https://github.com/ocaml/ocaml/pull/11149[Make the bootstrap process repeatable #11149] (OCaml)
+
+bootstrap cycles in bazel: https://gist.github.com/rrbutani/f5d80af864e67d873ae4491111d9dcce
+
+bootstrap example: https://gist.github.com/rrbutani/f427d642dd995c1181918570b0caa156
+
+another, without transitions:  https://gist.github.com/rrbutani/4ef90cf0e87304c1d112b8168eb76a38
+
+
+https://github.com/bazelbuild/bazel/issues/11584
+
