--- a/bzl/docs/configuration.adoc
+++ b/bzl/docs/configuration.adoc
@@ -1,5 +1,17 @@
 = configuration
 
+Two broad classes:
+
+* fixed - forced by platform and toolchain
+* preferential - user's choice
+
+Several sub-classes:
+
+* system config (fixed)
+* toolchain config (fixed)
+* build config (preferential - how the user wants the compilers to be configured)
+* deployment config (preferential) - how the user wants stuff installed
+
 The `./configure` script emits several classes of config data: toolchain and system.
 
 * toolchain config is stuff like compile and link flags. determined by finding and interrogating the tools.
