many chgs to config, add mustache, fixes:
* mv config stuff to //config (//utils:Config => //config:Config, etc)
* partition config stuff (cc_toolchain, sys, build, deploy configs)
* replace shell/awk/etc. preprocessing with mustache
  ** runtime/caml: jumptbl.h, opnames.h, s.h
  ** runtime/build_config.h.mustache
  ** domainstate stuff in utils, runtime
  ** asm code in runtime, e.g. //runtime/amd64.S.mustache
  ** bytecomp/opcodes.ml.mustache
* eliminate runtime/caml/cross-compile in favor of mustache processing
* fix otherlibs builds
* etc.

--- a/bzl/docs/cross_compilation.adoc
+++ b/bzl/docs/cross_compilation.adoc
@@ -12,3 +12,6 @@ tools, and the cross-compiler used to compile output for the foreign
 target.
 
 link:https://clang.llvm.org/docs/CrossCompilation.html[Cross-compilation using Clang]
+
+
+link:https://github.com/ocaml/ocaml/issues/4303#issuecomment-1274375011[Wish: Support for cross-compilation #4303]
